src/objects/Annual_Sales_Plan_Items__c.object
<CustomObject>
    <fields>
        <fullName>Aggregators_Status_Update__c</fullName>
        <label>Aggregators Status Update</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Sales_Plan__c</fullName>
        <label>Annual Sales Plan</label>
        <referenceTo>Annual_Sales_Plan__c</referenceTo>
        <relationshipName>Proposed_Conference_Attendance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Approved_Aggregator_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved Aggregator Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Association</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Aggregator</value>
            </filterItems>
            <filterItems>
                <field>Account.Approved__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annual Sales Plan Items (Approved Aggregator Name)</relationshipLabel>
        <relationshipName>Annual_Sales_Plan_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audience__c</fullName>
        <label>Audience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Advancement</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Career Services</fullName>
                </value>
                <value>
                    <fullName>Enrollment Management</fullName>
                </value>
                <value>
                    <fullName>Financial Aid</fullName>
                </value>
                <value>
                    <fullName>Registrar</fullName>
                </value>
                <value>
                    <fullName>Student Life</fullName>
                </value>
                <value>
                    <fullName>Veterans Affairs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conference_Name_Presentation_Proposed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conference Name/Presentation Proposed</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Conference</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Annual Sales Plan Items</relationshipLabel>
        <relationshipName>Annual_Sales_Plan_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conference_Name__c</fullName>
        <label>Conference Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dates__c</fullName>
        <label>Dates</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Annual Sales Plan Items</relationshipLabel>
        <relationshipName>Annual_Sales_Plan_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PCA_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCA Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Presenting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presenting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>School_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Annual Sales Plan Items</relationshipLabel>
        <relationshipName>Annual_Sales_Plan_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Target_Aggregator_Name__c</fullName>
        <label>Target Aggregator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_ESSS_Status_Update__c</fullName>
        <label>Target ESSS Status Update</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Awaiting signed contract</fullName>
                </value>
                <value>
                    <fullName>Providing Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Record__c</fullName>
        <label>Target Record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Target ESSS Schools</fullName>
                </value>
                <value>
                    <fullName>Target School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Enrollments__c</fullName>
        <label>Total Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Membership__c</fullName>
        <label>Total Membership</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Targets_in_Territory__c</fullName>
        <label># of Targeted Schools in Territory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Annual Sales Plan Items</label>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Annual Sales Plan Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Annual Sales Plan Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>